fix: changed config

--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@ database:
   host: "localhost"
   port: 5432
   user: "postgres"
-  password: "956123"
+  password: "yourpassword"
   dbname: "postgres"
   sslmode: "disable"
 
 paths:
-  xml_dumps_dir: "/home/rect/Projects/sql_sandbox/dba.stackexchange.com/"
+  xml_dumps_dir: "/path/to/xml/dumps"
   output_sql_file: "../filtered_schema.sql"
   schema_file: "../schema.sql"
